@@ -23,6 +23,8 @@ Repository `tarball download <http://pysnmp.cvs.sourceforge.net/viewvc/pysnmp/py
 - Fix to snmpInvalidMsgs and snmpUnknownSecurityModels MIB symbols
   import at SNMPv3 MP model.
 - Fix to NotificationOriginator to cope with unspecified user callable.
+- Fix to OctetString.prettyOut() to pretty-print Python 3 bytes without
+  'b' qualifier.
 
 Revision 4.3.1, released 12-11-2015
 -----------------------------------
